xiaomi: add panel type in device tree
QCT added the new parameter(qcom,mdss-dsi-panel-physical-type) for panel
type. Default panel type is LCD. We change the panel type to OLED.

Bug: 132392874
Test: read the "panel->panel_type" from dsi_panel.c
Change-Id: I92fc4d1abe66eab6ca8a9c1e898a26c00da01fd6
Signed-off-by: Lopy Cheng <lopycheng@google.com>

--- a/arch/arm64/boot/dts/xiaomi/tucana/tucana-sdmmagpie-display.dtsi
+++ b/arch/arm64/boot/dts/xiaomi/tucana/tucana-sdmmagpie-display.dtsi
@@ -75,6 +75,7 @@
 };
 
 &dsi_xiaomi_f4_41_06_0a_fhd_cmd {
+	qcom,mdss-dsi-panel-physical-type = "oled";
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_labibb_amoled>;
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 	qcom,mdss-dsi-bl-min-level = <2>;
@@ -125,6 +126,7 @@
 };
 
 &dsi_xiaomi_f4_36_02_0b_fhd_cmd {
+	qcom,mdss-dsi-panel-physical-type = "oled";
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_labibb_amoled>;
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 	qcom,mdss-dsi-bl-min-level = <2>;
@@ -175,6 +177,7 @@
 };
 
 &dsi_xiaomi_f4_42_06_0c_fhd_cmd {
+	qcom,mdss-dsi-panel-physical-type = "oled";
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_labibb_amoled>;
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 	qcom,mdss-dsi-bl-min-level = <2>;
