--- a/arch/arm64/boot/dts/xiaomi/davinci/davinci-sdmmagpie-display.dtsi
+++ b/arch/arm64/boot/dts/xiaomi/davinci/davinci-sdmmagpie-display.dtsi
@@ -41,6 +41,7 @@
 };
 
 &dsi_ss_fhd_ea_f10_cmd {
+    qcom,mdss-dsi-panel-physical-type = "oled";
     qcom,panel-supply-entries = <&dsi_panel_pwr_supply_labibb_amoled>;
     qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
     qcom,mdss-dsi-bl-min-level = <2>;
@@ -103,6 +104,7 @@
 };
 
 &dsi_ss_fhd_eb_f10_cmd {
+    qcom,mdss-dsi-panel-physical-type = "oled";
     qcom,panel-supply-entries = <&dsi_panel_pwr_supply_labibb_amoled>;
     qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
     qcom,mdss-dsi-bl-min-level = <256>;
